[package]
name = "sucky"
version = "0.2.0"
authors = ["Dave Jones"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3.0", features = ["full"] }
futures = { version = "0.3.13" }
reqwest = { "version" = "0.11.2", features = ["blocking"] }
quick-xml = { "version" = "0.22.0" }
